# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: cmake.yml
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/beginner_tutorials/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/.private/beginner_tutorials/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/devel/.private/beginner_tutorials/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  catkin_tools_prebuild.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig-version.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/src/beginner_tutorials/src/: publisher.cpp  subscriber.cpp
catkin_ws/src/beginner_tutorials/src/results/: cpplint.txt
include/: publisher.hpp
launch/: nodes.launch
results/: cppcheck.txt  cpplint.txt  rosbagg.bag
src/: publisher.cpp  subscriber.cpp
srv/: ChangeBaseString.srv
test/: main.cpp  publisherTest.cpp  publisherTest.launch
(+1 files in other folders)
