<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>ROS Publisher/Subscriber</description>

  <maintainer email="pkabra@terpmail.umd.edu">Pooja Kabra</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/beginner_tutorials</url> -->

  <author email="pkabra@terpmail.umd.edu">Pooja Kabra</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
